// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header cells with a defined sortOrder must show a sort indicator 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell clickable"
        >
          <button>
            ColumnTitle
            <span
              aria-label="su-angle-up"
              class="su-angle-up headerCellSortIcon"
            />
          </button>
        </th>
        <th
          class="headerCell clickable"
        >
          <button>
            ColumnTitle
            <span
              aria-label="su-angle-down"
              class="su-angle-down headerCellSortIcon"
            />
          </button>
        </th>
        <th
          class="headerCell"
        >
          <span>
            ColumnTitle
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Render a table with buttons 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="fa-pencil"
              class="fa fa-pencil"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell visible cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="fa-pencil"
                class="fa fa-pencil"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table with different buttons for each row 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="fa-pencil"
              class="fa fa-pencil"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell visible cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="fa-pencil"
                class="fa fa-pencil"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="buttonCell visible cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="fa-plus"
                class="fa fa-plus"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render an empty table 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="tablePlaceholderArea"
  >
    <span
      aria-label="su-battery-low"
      class="su-battery-low tablePlaceholderIcon"
    />
    <div
      class="tablePlaceholderText"
    >
      No entries
    </div>
  </div>
</div>
`;

exports[`Render the Table component 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in multiple selection mode 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <label
              class="label"
            >
              <span
                class="switch checkbox light"
              >
                <input
                  type="checkbox"
                />
                <span />
              </span>
            </label>
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in single selection mode 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span />
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in tree structure 1`] = `
<div
  class="tableContainer dark"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right clickable"
                role="button"
                tabindex="0"
              />
            </span>
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
            style="padding-left:25px"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right clickable"
                role="button"
                tabindex="0"
              />
            </span>
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
            style="padding-left:50px"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component with a skin 1`] = `
<div
  class="tableContainer light"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Column Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
